--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".DummyLogin"
+            android:label="Login"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
 
         <activity
@@ -34,10 +37,6 @@
             android:theme="@style/AppTheme.NoActionBar"/>
 
 
-
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
         <activity
             android:name=".addPart"
             android:label="Add Part"
